fix: resolve bazel build and astro MDX errors
- Fix testdata BUILD files: use package_name()/repository_name() functions
- Fix glob with allow_empty=True for missing *.cc files
- Escape <1% as &lt;1% in MDX to avoid JSX parsing
- Add .bazelignore to exclude testdata BUILD fixtures
- Add astro-build check to lefthook pre-push

--- a/docs-website/src/content/docs/starlark-go-x/roadmap.mdx
+++ b/docs-website/src/content/docs/starlark-go-x/roadmap.mdx
@@ -80,9 +80,9 @@ Critical: We must validate that the hooks have zero or negligible overhead when 
 |----------|------------------|
 | Hooks nil (disabled) | ~0% (nil pointer check only) |
 | OnExec enabled | 5-15% per instruction |
-| OnBranch enabled | <1% (only on branches) |
-| OnFunctionEnter/Exit | <1% (only on calls) |
-| OnIteration enabled | <1% (only on loops) |
+| OnBranch enabled | &lt;1% (only on branches) |
+| OnFunctionEnter/Exit | &lt;1% (only on calls) |
+| OnIteration enabled | &lt;1% (only on loops) |
 
 ### 2. Code Style Cleanup <Badge text="Required" variant="caution" />
 
