docs: comprehensive audit and improvements
Sidebar improvements:
- Add LSP section (Overview, Custom Dialects, Builtin Formats)
- Add missing Starlark pages (Implementations, Tooling, Use Cases, Types Roadmap)

Fixed issues:
- Fix MDX syntax in basics.mdx (:::note → <Aside>)
- Fix command names in tooling.mdx (sky fmt → skyfmt, etc.)

Expanded sparse docs with didactic examples:
- coverage/output-formats.mdx: All formats with examples, LCOV reference
- coverage/ci-integration.mdx: GitHub Actions, GitLab, Jenkins, Azure, CircleCI
- starlark-go-x/type-annotations.mdx: Syntax, AST nodes, use cases
- tools/overview.mdx: CardGrid, examples, comparison table
- getting-started/quick-start.mdx: Better cross-references

All 43 pages build successfully with validated links.

--- a/docs-website/src/content/docs/getting-started/quick-start.mdx
+++ b/docs-website/src/content/docs/getting-started/quick-start.mdx
@@ -82,4 +82,6 @@ Total: 100.0% (3/3 lines)
 
 - [Tools Overview](/sky/tools/overview/) - Learn about all Sky tools
 - [Coverage Guide](/sky/coverage/getting-started/) - Deep dive into coverage
-- [starlark-go-x](/sky/starlark-go-x/overview/) - Our enhanced interpreter
+- [Language Basics](/sky/starlark/basics/) - Learn Starlark syntax in detail
+- [Plugins](/sky/plugins/) - Extend Sky with custom commands
+- [starlark-go-x](/sky/starlark-go-x/overview/) - Our enhanced interpreter with coverage hooks
